# nonlinear-solvers

./: .gitmodules  README.md  animate_3d.py  animate_data.py  animate_hdf.py  bouss_solver.hpp  eigen_krylov_complex.hpp  eigen_krylov_real.hpp  energy_nlse.py  energy_sge.py  laplacians.hpp  nlse_driver.cpp  nlse_driver_3d.cpp  nlse_solver.hpp  sg_driver.cpp  sg_solver.hpp  torch_references.py  util.hpp
nlsolvers/: CMakeLists.txt  README.md  build_job.sh  capture_differences.sh  compare_methods.py  final_todo.txt  fusing_kernels.py  integrator_comparison_nlse.sh  integrator_comparison_nlse_cpu.sh  integrator_comparison_nlse_dev.sh  kill_script.sh  modules.txt  nlse_2d_launch.sh  nlse_3d_launch.sh  real_3d_launch.sh
nlsolvers/common/: CMakeLists.txt
nlsolvers/common/include/: cmdline_parser.hpp  laplacians.hpp  util.hpp
nlsolvers/core/: CMakeLists.txt
nlsolvers/core/drivers/: nlwave_bin_nlse.cpp  nlwave_bin_real.cpp
nlsolvers/core/include/: base_solver.hpp  complex_wave_solver.hpp  execution_context.hpp  host_execution_context.hpp  klein_gordon_solver.hpp  nlse_cubic_solver.hpp  real_wave_solver.hpp  sine_gordon_solver.hpp  solver_factory.hpp
nlsolvers/device/: CMakeLists.txt
nlsolvers/device/drivers/: CMakeLists.txt  kg_driver_dev.cpp  kg_driver_dev_2d.cpp  kg_driver_dev_3d.cpp  kg_sv_driver_dev_2d.cpp  kg_sv_driver_dev_3d.cpp  nlse_cubic_driver_2d.cpp  nlse_cubic_driver_3d.cpp  nlse_cubic_quintic_driver_dev.cpp  nlse_cubic_sewi_driver_2d.cpp  nlse_cubic_sewi_driver_3d.cpp  nlse_driver_dev.cpp  nlse_driver_dev_unified.cpp  nlse_saturating_driver_dev.cpp  phi4_driver_dev.cpp  realspace_driver_dev_unified.cpp  sg_double_driver_dev.cpp  sg_hyperbolic_driver_dev.cpp  sg_single_driver_dev.cpp  sg_sv_driver_dev_2d.cpp  sg_sv_driver_dev_3d.cpp  sp4_sv_driver_dev_2d.cpp  sp4_sv_driver_dev_3d.cpp  test_matfunc_complex.cpp  test_nlse_step.cpp  test_scipy_matfunc.cpp
nlsolvers/device/include/: bc_update_kernel_fusion.py  boundaries.cuh  common_kernels.cuh  kg_dev.hpp  kg_single.cuh  lanczos.hpp  lanczos_complex.hpp  matfunc_complex.hpp  matfunc_complex_small.hpp  matfunc_real.hpp  nlse.cuh  nlse_cubic_quintic.cuh  nlse_cubic_quintic_dev.hpp  nlse_dev.hpp  nlse_saturating.cuh  nlse_saturating_dev.hpp  phi4_dev.hpp  phi4_single.cuh  sg_double.cuh  sg_double_dev.hpp  sg_hyperbolic.cuh  sg_hyperbolic_dev.hpp  sg_single.cuh  sg_single_dev.hpp  stochastic_phi4.cuh  stochastic_phi4_dev.hpp
nlsolvers/drivers/: CMakeLists.txt  method_comparison.py  nlwave_bin_complex.cpp  nlwave_bin_real.cpp
nlsolvers/finalized_scripts/: c_fields_2d.py  c_fields_3d.py  compare_integrators_nlse_2d.py  compare_integrators_real_2d.py  compare_utils_complex_2d.py  compare_utils_real_2d.py  complex_launcher_2d.py  complex_launcher_3d.py  downsampling.py  kg_2d_launch.sh  kg_3d_launch.sh  m_fields_3d.py  nlse_2d_launch.sh  nlse_3d_launch.sh  nlse_sampler.py  real_launcher_2d.py  real_launcher_3d.py  real_sampler.py  valid_spaces_complex.py  valid_spaces_real.py
nlsolvers/host/: CMakeLists.txt
nlsolvers/host/drivers/: CMakeLists.txt  kg_driver.cpp  kg_driver_3d.cpp  kg_sv_driver.cpp  kg_sv_driver_3d.cpp  nlse_cubic_driver.cpp  nlse_cubic_driver_3d.cpp  nlse_cubic_driver_host_3d.cpp  nlse_cubic_driver_host_gautschi_3d.cpp  nlse_cubic_gautschi_driver.cpp  nlse_cubic_gautschi_driver_3d.cpp  nlse_cubic_quintic_driver.cpp  nlse_cubic_quintic_gautschi_driver.cpp  nlse_saturating_driver.cpp  nlse_saturating_gautschi_driver.cpp  nlwave_bin_nlse.cpp  nlwave_bin_real.cpp  phi4_driver.cpp  sg_double_driver.cpp  sg_hyperbolic_driver.cpp  sg_single_driver.cpp  sg_single_driver_sv.cpp  test_scipy_matfunc.cpp
nlsolvers/host/include/: boundaries.hpp  boundaries_3d.hpp  eigen_krylov_complex.hpp  eigen_krylov_real.hpp  kg_solver.hpp  kg_solver_3d.hpp  kg_sv_solver.hpp  kg_sv_solver_3d.hpp  nlse_cubic_gautschi_solver.hpp  nlse_cubic_gautschi_solver_3d.hpp  nlse_cubic_quintic_solver.hpp  (+13 more)
nlsolvers/process_h5/: abstracted_kg_3d.sh  abstracted_nlse_2d.sh  abstracted_view.sh  array.md  collective_stats_per_dir.py  ensemble_processing.py  find_h5_files.py  find_nans.py  plot_slices.py  run_collective_processing.sh  run_plots.sh  to_delete.sh
nlsolvers/real_scripts/: m_fields_2d.py  real_launcher_2d.py  real_launcher_3d.py
nlsolvers/scipy-test/: check_krylov_compute.py
nlsolvers/scripts/: analyze_nlse_trajectory.py  analyze_scales.py  analyze_sge_trajectory.py  animate_3d.py  animate_hdf.py  complex_samplers.py  comprehensive_sg_sampler.py  downsampling.py  energies_sge.py  general_nlse_soliton_samplers.py  general_real_soliton_samplers.py  global_nlse_sampler.py  improved_nlse_samplers.py  info_analysis.py  kg.py  kg_simplified_launch.py  launch_sge_single.sh  method_comparison.py  nlse_cubic_3d_simplified_launch.py  nlse_cubic_launch.py  nlse_cubic_quintic_launch.py  nlse_cubic_quintic_simplified_launch.py  nlse_cubic_simplified_launch.py  nlse_saturating.py  nlse_saturating_simplified_launch.py  periodic_trap.py  phi4.py  phi4_simplified_launch.py  plot_nlse_conditions.py  plot_sge_conditions.py  precise_nlse_phenomena.py  real_initial_samplers.py  real_samplers.py  sampler_phenomenon_viz.py  sampler_viz.py  sge_double.py  sge_double_simplified_launch.py  sge_hyperbolic.py  sge_hyperbolic_simplified_launch.py  sge_single.py  (+9 more)
nlsolvers/scripts_nlse/: compare_integrators.py  compare_integrators_nlse.py  compare_integrators_nlse_3d.py  compare_utils_nlse.py  compare_utils_nlse_3d.py  folding_strategy.txt  gautschi_versus_ss2.py  glob_hdf5_3d.py  launcher_3d.py  nlse_cubic_launcher.py  nlse_sampler.py  sampler_phenomenon_viz.py  sampler_viz.py  spatial_amplification.py  valid_spaces.py  visualization.py
nlsolvers/scripts_sge_kge/: classify_trajectory.py  compare_integrators.py  compare_utils_sge.py  downsampling.py  global_analysis.py  nonlinearity_profiles_3d.py  perf_refactored.py  real_3d_launcher.py  real_launcher.py  real_sampler.py  sampler_viz.py  sge_launcher.py  simplified_classifier.py  spatial_amplification.py  spatial_amplification_3d.py  strategy.txt  sweep_spatial.py  valid_spaces.py  visualization.py
(+49 files in other folders)
