if(BUILD_NLSE_CUBIC)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/nlse_cubic_driver.cpp")
        add_executable(nlse_cubic nlse_cubic_driver.cpp)
        target_link_libraries(nlse_cubic PRIVATE host_solvers)
        install(TARGETS nlse_cubic RUNTIME DESTINATION bin)
    endif()
endif()

if(BUILD_NLSE_CUBIC_QUINTIC)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/nlse_cubic_quintic_driver.cpp")
        add_executable(nlse_cubic_quintic nlse_cubic_quintic_driver.cpp)
        target_link_libraries(nlse_cubic_quintic PRIVATE host_solvers)
        install(TARGETS nlse_cubic_quintic RUNTIME DESTINATION bin)
    endif()
endif()

if(BUILD_NLSE_SATURATING)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/nlse_saturating_driver.cpp")
        add_executable(nlse_saturating nlse_saturating_driver.cpp)
        target_link_libraries(nlse_saturating PRIVATE host_solvers)
        install(TARGETS nlse_saturating RUNTIME DESTINATION bin)
    endif()
endif()

if(BUILD_SG_SINGLE)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/sg_single_driver.cpp")
        add_executable(sg_single sg_single_driver.cpp)
        target_link_libraries(sg_single PRIVATE host_solvers)
        install(TARGETS sg_single RUNTIME DESTINATION bin)
    endif()
endif()
